--- a/views/adduser.handlebars
+++ b/views/adduser.handlebars
@@ -3,23 +3,23 @@
 <form method="POST" action="/user/add">
     <div class="form-group">
         <label>ID</label>
-        <input type="text" class="form-control" name="id" placeholder="Add ID">
+        <input type="text" class="form-control" name="id" placeholder="Add ID" required>
     </div>
     <div class="form-group">
         <label>First Name</label>
-        <input type="text" class="form-control" name="first_name" placeholder="First Name">
+        <input type="text" class="form-control" name="first_name" placeholder="First Name" required>
     </div>
     <div class="form-group">
         <label>Last Name</label>
-        <input type="text" class="form-control" name="last_name" placeholder="Last Name">
+        <input type="text" class="form-control" name="last_name" placeholder="Last Name" required>
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input type="text" class="form-control" name="email" placeholder="Email Address">
+        <input type="text" class="form-control" name="email" placeholder="Email Address" required>
     </div>
     <div class="form-group">
         <label>Phone</label>
-        <input type="text" class="form-control" name="phone" placeholder="Phone Number">
+        <input type="text" class="form-control" name="phone" placeholder="Phone Number" required>
     </div>
     <input type="submit" class="btn btn-primary" value="Save">
 </form>
